Main terminado aunque no sea obligatorio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_C_STANDARD 99)
 
 # Agrega tu archivo fuente principal
 add_executable(EstructuraDatos
-        Tema0/Practica1.c
+        #Tema0/Practica1.c
         Tema1/Practica2.c
         Tema2/complejo.c
         Tema2/complejo.h
