intento de hacer la practica de los colores y lo que hicimos en clase pero todo mal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.20)
 project(EstructuraDatos C)
 
-# Configura el estándar de C
+# Configurar estándar de C
 set(CMAKE_C_STANDARD 99)
+
+# Agregar directorios donde están los archivos de cabecera
+include_directories(Tema2 Tema2_0)
 
 # Ejecutable para el código en Tema2 (main.c + dependencias)
 add_executable(MainEjecutable
@@ -16,5 +19,9 @@ add_executable(Practica2Ejecutable
         Tema1/Practica2.c
 )
 
-# Opcional: Puedes descomentar esto si quieres otro ejecutable
-# add_executable(Ejemplo1Ejecutable Tema1/Ejemplo1.c)
+# Ejecutable que usa Bitmap (Para la práctica de fractales)
+add_executable(FractalEjecutable
+        Tema2_0/main.c
+        Tema2_0/Bitmap.c
+)
+
